# resume_project

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
frontend/src/: App.js  index.css
frontend/src/api/: api.js
frontend/src/components/: ResumeForm.js  ResumeItem.js
frontend/src/pages/: LoginPage.js  RegisterPage.js  ResumeDetailPage.js  ResumesPage.js
migrations/: env.py
migrations/versions/: f8e590789b25_initial_migration.py
src/: config.py  main.py
src/api/routers/: auth.py  resumes.py
src/core/: auth_dependencies.py  database.py  dependencies.py  security.py
src/models/: __init__.py  resume.py  user.py
src/repositories/: resumes.py  users.py
src/schemas/: resume.py
src/services/: auth.py  resumes.py
tests/: conftest.py  test_api.py
